Finished IAML code parts.

--- a/IAML_CW2.ipynb
+++ b/IAML_CW2.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introductory Applied Machine Learning - Coursework 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 977,
    "metadata": {
@@ -1947,7 +1954,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 3: (26 points) Logistic Regression Classification"
+    "# Question 3: (26 points) Logistic Regression Classification"
    ]
   },
   {
@@ -3732,7 +3739,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 4 : (30 Points) Exploratory Analysis"
+    "# Question 4 : (30 Points) Exploratory Analysis"
    ]
   },
   {
@@ -9476,7 +9483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 5: (18 points) Principal Component Analysis\n",
+    "# Question 5: (18 points) Principal Component Analysis\n",
     "\n",
     "One aspect which we have not yet explored is the temporal nature of the data.\n",
     "That is, we need to keep in mind that the readings have a temporal aspect to\n",
@@ -13886,7 +13893,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 6: (41 points) Regression"
+    "# Question 6: (41 points) Regression"
    ]
   },
   {
